<resources>
    <string name="app_name">Arduino-led-table</string>
    <string name="dialog_title">Connect device</string>
    <string name="pairing_title">paring</string>
    <string name="refresh_title">refresh</string>
    <string name="settings_title">setting</string>
    <string name="title_activity_led">LedActivity</string>
    <string name="top">top</string>
    <string name="down">down</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="start">start</string>
    <string name="back">back</string>
    <string name="rainbow">rainbow</string>
    <string name="color_palette">color_palette</string>
    <string name="stars">Stars</string>
    <string name="vu_meter">VU-meter</string>
    <string name="dice">dice</string>
    <string name="tetris">tetris</string>
    <string name="snake">snake</string>
    <string name="pong">pong</string>
    <string name="bricks">bricks</string>
    <string name="leds">LEDs</string>
    <string name="buzzer">Buzzer</string>
    <string name="connect">connect</string>
    <string name="bluetooth_status">Bluetooth-status: </string>
    <string name="connected">connected</string>
    <string name="not_connected">not connected</string>
    <string name="devices_found">devices found</string>
    <string name="wrong_pairing">wrong pairing</string>
    <string name="wrong_unpairing">wrong unpairing</string>
    <string name="wrong_socket">wrong socket</string>
    <string name="wrong_connecting">wrong connection</string>
    <string name="error_passing_data">error passing data</string>
    <string name="warning">warning</string>
    <string name="bt_off">bluetooth off</string>
    <string name="turn_on_bt">turn bluetooth on</string>
    <string name="close_app">close app</string>
    <string name="fatal_error">fatal error</string>
    <string name="bt_not_found">bluetooth not found</string>
    <string name="ftw">FTW</string>
    <string name="ftw_auto_play">ftw auto play</string>
</resources>
