<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/title"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:textSize="25dp"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-condensed"
            android:layout_gravity="center_horizontal"/>
        <ProgressBar
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/progressView"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/list_paired"
        android:layout_width="match_parent"
        android:layout_height="0.0dp"
        android:layout_weight="1.0">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRefresh"
            android:layout_weight="1.0"
            android:text="@string/refresh_title"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSettings"
            android:layout_weight="1.0"
            android:text="@string/settings_title"/>
    </LinearLayout>
</LinearLayout>